--- a/css/index.css
+++ b/css/index.css
@@ -1,64 +1,6 @@
 @charset "utf-8"; 
-body, div, ul, li{margin:0; padding:0;font-style: normal;font:12px/22px "微软雅黑",Arial, Helvetica, sans-serif} 
-ol, ul ,li{list-style:none} 
-img {border: 0; vertical-align:middle} 
-body{color:#000000;background:#FFF; text-align:center} 
+body{color:#000000;background:#FFF; text-align:center; padding-top: 50px;} 
 .clear{clear:both;height:1px;width:100%; overflow:hidden; margin-top:-1px} 
-a{color:#000000;text-decoration:none}  
-a:hover{color:#BA2636} 
- 
-.red ,.red a{ color:#F00} 
-.lan ,.lan a{ color:#1E51A2} 
-.pd5{ padding-top:5px} 
-.dis{display:block} 
-.undis{display:none} 
- 
-ul#nav{ width:100%; height:60px; background:#00A2CA;margin:0 auto; position: relative;} 
-ul#nav li{display:inline; height:60px;} 
-ul#nav li a{display:inline-block; padding:0 40px; height:60px; line-height:60px;color:#FFF; font-family:"微软雅黑",Arial; font-size:16px;} 
-ul#nav li a:hover{background:#0095BB} 
-
-.header{
-}
-
-.index_nav{
-	/*float: left;*/
-}
-.banner{
-	margin-left: auto;
-	margin-right: auto;
-	padding-right: auto;
-	padding-top: 40px;
-	padding-bottom: 40px;
-	background: #F7F7F7;
-	/*height: 10em;*/
-	/*height: 15em;*/
-	font-size: 20px;
-}
-.search_module{
-	margin-top: 20px;
-}
-.index_search{
-	height: 40px;
-	width: 400px;
-	border-color: #00A2CF;
-	/*border: 5px;*/
-}
-.index_button{
-	height: 40px;
-	width: 200px;
-}
-.container{
-	margin-top: 20px;
-}
-.module{
-	height: 5em;
-	color: #0095BB;
-}
-.module a{
-	width: 50px;
-	margin: 0 30px 0 30px;
-}
 
 
 .clear{
