add it url to index.html

--- a/css/index.css
+++ b/css/index.css
@@ -2,7 +2,30 @@
 body{color:#000000;background:#FFF; text-align:center; padding-top: 50px;} 
 .clear{clear:both;height:1px;width:100%; overflow:hidden; margin-top:-1px} 
 
-
 .clear{
 	clear: all;
 }
+
+.custom-section-left{text-align: left;}
+
+
+/*----------------------------------------
+    页脚
+    ------------------------------------*/
+footer {
+    background: #333;
+    color: #eee;
+    font-size: 11px;
+    padding: 20px;
+}
+ul.unstyled {
+	color: #eee;
+    list-style: none;
+    padding: 0;
+}
+ul.unstyled a{
+	color: #eee;
+}
+footer h6 {
+    color: white;
+} 
