--- a/css/index.css
+++ b/css/index.css
@@ -29,3 +29,41 @@ ul.unstyled a{
 footer h6 {
     color: white;
 } 
+
+
+/*returnTop*/
+p#back-to-top{ 
+	position:fixed; 
+	display:none; 
+	bottom:100px; 
+	right:80px; 
+} 
+p#back-to-top a{ 
+	text-align:center; 
+	text-decoration:none; 
+	color:#d1d1d1; 
+	display:block; 
+	width:64px; 
+	/*使用CSS3中的transition属性给跳转链接中的文字添加渐变效果*/
+	-moz-transition:color 1s; 
+	-webkit-transition:color 1s; 
+	-o-transition:color 1s; 
+} 
+p#back-to-top a:hover{ 
+	color:#979797; 
+} 
+p#back-to-top a span{ 
+	background:transparent url(../img/top.png) no-repeat -25px -290px; 
+	border-radius:6px; 
+	display:block; 
+	height:64px; 
+	width:56px; 
+	margin-bottom:5px; 
+	/*使用CSS3中的transition属性给<span>标签背景颜色添加渐变效果*/
+	-moz-transition:background 1s; 
+	-webkit-transition:background 1s; 
+	-o-transition:background 1s; 
+}
+#back-to-top a:hover span{ 
+	background:transparent url(../img/top.png) no-repeat -25px -290px; 
+}
