--- a/css/index.css
+++ b/css/index.css
@@ -7,6 +7,9 @@ body{color:#000000;background:#FFF; text-align:center; padding-top: 50px;}
 }
 
 .custom-section-left{text-align: left;}
+.youyan{margin-top: 30px; padding-left: 30px; padding-right: 30px;}
+
+
 
 
 /*----------------------------------------
