--- a/css/index.css
+++ b/css/index.css
@@ -8,7 +8,7 @@ body{color:#000000;background:#FFF; text-align:center; padding-top: 50px;}
 
 .custom-section-left{text-align: left;}
 .custom-section-left h1{width: 300px;}
-.youyan{margin-top: 30px; padding-left: 30px; padding-right: 30px;}
+.youyan{margin-top: 30px; padding-left: 30px; padding-right: 30px; height: 350px;}
 .search{padding-left: 50px; margin-top: 30px; float: left;}
 
 
