Update index with clean blog.Add book/blog/abour/contact and so on.

--- a/css/index.css
+++ b/css/index.css
@@ -9,9 +9,7 @@ body{color:#000000;background:#FFF; text-align:center; padding-top: 50px;}
 .custom-section-left{text-align: left;}
 .custom-section-left h1{width: 300px;}
 .youyan{margin-top: 30px; padding-left: 30px; padding-right: 30px;}
-.search{padding-left: 50px; margin-top: 30px; float: left;}
-
-
+.search{padding-left: 30px; float: left;}
 
 /*----------------------------------------
     页脚
@@ -22,17 +20,9 @@ footer {
     font-size: 11px;
     padding: 20px;
 }
-ul.unstyled {
-	color: #eee;
-    list-style: none;
-    padding: 0;
+footer a{
+    color: cornflowerblue;
 }
-ul.unstyled a{
-	color: #eee;
-}
-footer h6 {
-    color: white;
-} 
 
 
 /*returnTop*/
