commit file throug Batch

--- a/css/book.css
+++ b/css/book.css
@@ -1,5 +1,9 @@
 @charset "utf-8";
 
-.book-form{font-size: 16px; font-family: "微软雅黑", arial; text-align: left;}
+.book-form{font-size: 16px; font-family: "微软雅黑", arial; text-align: left; margin-top: 10px; margin-bottom: 15px;}
 .book-form h3{padding-left: 60px;}
 .book-form span{padding-left: 50px;}
+.book-form span input{margin-right: 5px;}
+.book-list{margin-top: 15px; margin-left: 50px;}
+.book-list li{display:block; width: 200px; height: 330px; float: left; margin: 20px;}
+/*.book-list img{width: 200px;}*/
